<resources>
    <string name="app_name">TeamFreshProject</string>

    <string name="menu_home">홈</string>
    <string name="menu_job">일구하기</string>
    <string name="menu_calculate">정산</string>
    <string name="menu_community">게시판</string>
    <string name="menu_review">리뷰</string>
    <string name="menu_profile">프로필</string>

    <string name="common_network_error">네트워크 상태를 확인해주세요</string>
    <string name="common_unknown_error">데이터를 로드하지 못했습니다\n재시도 후 같은 문제가 반복되면\n 관리자에게 문의해주세요</string>
    <string name="common_reload">다시 시도하려면 누르세요</string>

    <string name="sign_in_id">아이디</string>
    <string name="sign_in_password">비밀번호</string>
    <string name="sign_in_sign_in">로그인</string>
    <string name="sign_in_find_id">아이디 찾기</string>
    <string name="sign_in_find_password">비밀번호 찾기</string>
    <string name="sign_in_sign_up">회원가입</string>
    <string name="sign_in_sign_in_kakao">카카오 로그인</string>
    <string name="sign_in_id_empty">아이디를 입력해주세요.</string>
    <string name="sign_in_id_error">존재하지 않는 회원입니다.</string>
    <string name="sign_in_password_empty">비밀번호를 입력해주세요.</string>
    <string name="sign_in_password_error">비밀번호가 정확하지 않습니다.</string>
    <string name="sign_in_common_error">로그인에 실패했습니다. 다시한번 시도해주세요.</string>

    <string name="community_commnet">댓글</string>
    <string name="community_view">조회%d</string>
    <string name="community_no_nickname">(알 수 없음)</string>
    <string name="community_noti">알림</string>
    <string name="community_profile">프로필</string>
    <string name="community_tab_1">자유게시판</string>
    <string name="community_tab_2">한줄평</string>
    <string name="community_tab_3">영차TV</string>
    <string name="community_write">글쓰기</string>
</resources>
