<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingHorizontal="20dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_id"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/sign_in_id"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/iv_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/sign_in_password"
        app:layout_constraintTop_toBottomOf="@id/til_id">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_primary_button"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/sign_in_sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <LinearLayout
        android:id="@+id/ll_etc_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_login">

        <TextView
            android:id="@+id/tv_find_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/sign_in_find_id"
            android:textSize="14sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/secondary_300" />

        <TextView
            android:id="@+id/tv_find_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/sign_in_find_password"
            android:textSize="14sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/secondary_300" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/sign_in_sign_up"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_kakao_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/kakao_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_etc_container" />

</androidx.constraintlayout.widget.ConstraintLayout>
